# iron-core-engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
engine/: CMakeLists.txt
engine/asset/: Animation.h  AnimationPlayer.cpp  AnimationPlayer.h  AnimationStateMachine.cpp  AnimationStateMachine.h  CharacterAnimator.cpp  CharacterAnimator.h  GltfLoader.cpp  GltfLoader.h  Ik.cpp  Ik.h  Pose.cpp  Pose.h  PoseBlend.cpp  PoseBlend.h  Skeleton.h
engine/audio/: AudioEmitter.h  AudioEmitter.reflect.cpp  AudioEngine.cpp  AudioEngine.h
engine/core/: Application.cpp  Application.h  FixedTickScheduler.h  Input.cpp  Input.h  Log.cpp  Log.h  NetArgs.cpp  NetArgs.h  Platform.cpp  Platform.h  Time.h  Window.cpp  Window.h  engine_placeholder.cpp
engine/debug/: GizmoRegistry.cpp  GizmoRegistry.h
engine/editor/: CMakeLists.txt  EditorState.cpp  EditorState.h  EnvironmentPanel.cpp  EnvironmentPanel.h  Gizmo.cpp  Gizmo.h  ImGuiLayer.cpp  ImGuiLayer.h  NodeGraphPanel.cpp  NodeGraphPanel.h  PrefabBrowser.cpp  PrefabBrowser.h  ReflectionInspector.cpp  ReflectionInspector.h  SceneInspector.cpp  SceneInspector.h  SceneOutliner.cpp  SceneOutliner.h  UndoHistory.cpp  UndoHistory.h  ViewGizmo.cpp  ViewGizmo.h  ViewportInput.h
engine/game/: Collision.cpp  Collision.h  Health.h  Inventory.cpp  ProjectileSim.cpp  ProjectileSim.h
engine/gameplay/: ComponentNodes.cpp  ComponentNodes.h  GameContext.h  GameplayNodes.cpp  GameplayNodes.h  Health.h  Health.reflect.cpp  LogicGraph.h  LogicGraphComponent.h  LogicGraphComponent.reflect.cpp  LogicRuntime.cpp  LogicRuntime.h  SpawnPoint.h  SpawnPoint.reflect.cpp
engine/math/: Aabb.h  Mat4.h  Quaternion.cpp  Quaternion.h  Ray.h  Transform.h  Vec.h
engine/net/: ByteStream.h  ClockSync.cpp  ClockSync.h  LagCompensator.cpp  LagCompensator.h  MessageRegistry.cpp  MessageRegistry.h  NetTransport.cpp  NetTransport.h  NetworkStats.h  PeerManager.cpp  PeerManager.h  PeerMessages.h  PredictionEngine.h  Replicator.cpp  Replicator.h  TimeHistory.h
engine/net/backends/gns/: GnsTransport.cpp  GnsTransport.h
engine/net/backends/mock/: MockTransport.cpp  MockTransport.h
engine/nodes/: BuiltinNodes.cpp  BuiltinNodes.h  GraphEditorModel.cpp  GraphEditorModel.h  GraphEvaluator.cpp  GraphEvaluator.h  NodeContext.h  NodeGraph.cpp  NodeGraph.h  NodeGraphIO.cpp  NodeGraphIO.h  NodeRegistry.cpp  NodeRegistry.h
engine/physics/: CharacterController.cpp  CharacterController.h  DistanceConstraint.h  PhysicsWorld.cpp  PhysicsWorld.h  Ragdoll.cpp  Ragdoll.h  Rope.cpp  Rope.h  VerletPoint.h
engine/reflection/: FieldDesc.h  Reflection.h  RegisterCoreTypes.h  TypeId.h  TypeIdOf.h
engine/render/: Bloom.h  Fog.h  Handles.h  HudBatch.h  Ibl.h  Light.h  Material.h  Parallax.h  ParticleSystem.h  Pbr.h  PointLightMath.h  PostChainPlan.cpp  PostChainPlan.h  PostEffect.h  ProceduralSky.cpp  ProceduralSky.h  ProceduralTextures.h  ReflectionPlane.cpp  ReflectionPlane.h  ReflectionProbe.h  ReflectionProbe.reflect.cpp  RenderHandles.h  RenderHandles.reflect.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  Ssao.h  StandardLitShader.h  TessLod.h  TextureLoader.cpp  TextureLoader.h  Tonemap.h
engine/scene/: Camera.cpp  Camera.h  EntityJson.cpp  EntityJson.h  FirstPersonController.cpp  FirstPersonController.h  FreeFlyCamera.cpp  FreeFlyCamera.h  MaterialDef.reflect.cpp  Mesh.cpp  Mesh.h  MeshRef.reflect.cpp  Picking.cpp  Picking.h  Prefab.cpp  Prefab.h  PrefabIO.cpp  PrefabIO.h  ReflectionIO.cpp  ReflectionIO.h  RegisterCoreComponents.cpp  RegisterCoreComponents.h  Scene.h  SceneFormat.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneIO.cpp  SceneIO.h  SkinnedMesh.h
engine/ui/: BitmapFont.cpp  BitmapFont.h  BuiltinFont.cpp  BuiltinFont.h  FontAtlas.cpp  FontAtlas.h  Hud.cpp  Hud.h  UiElement.h  UiInput.cpp  UiInput.h  UiLayout.cpp  UiLayout.h  UiRender.cpp  UiRender.h  UiSerialize.cpp  UiSerialize.h  UiStack.cpp  UiStack.h
engine/util/: FileWatcher.cpp  FileWatcher.h
engine/world/: CollisionShape.h  CollisionShape.reflect.cpp  ComponentArray.h  ComponentRegistry.cpp  ComponentRegistry.h  ComponentSet.h  Entity.h  HierarchyConfig.h  Parent.h  Transform.h  Transform.reflect.cpp  World.cpp  World.h  WorldHierarchy.cpp  WorldHierarchy.h
games/01-spinning-cube/: CMakeLists.txt  main.cpp
games/02-strandbound/: CMakeLists.txt  RopeThrower.cpp  RopeThrower.h  RopeTool.cpp  RopeTool.h  RopeWalker.cpp  RopeWalker.h  main.cpp
games/03-showcase/: CMakeLists.txt  main.cpp
games/05-net-cubes/: CMakeLists.txt  Messages.h  Protocol.cpp  Protocol.h  main.cpp
games/06-net-tag/: CMakeLists.txt  Messages.h  main.cpp
games/07-net-shooter/: Arena.cpp  Arena.h  CMakeLists.txt  HitscanRifle.cpp  HitscanRifle.h  Messages.h  Projectile.h  RocketLauncher.cpp  RocketLauncher.h  main.cpp
games/10-gltf-viewer/: CMakeLists.txt  main.cpp
games/11-sandbox/: CMakeLists.txt  main.cpp
games/12-ui-arena/: CMakeLists.txt  main.cpp
games/15-net-chest/: CMakeLists.txt  ChestLogic.cpp  ChestLogic.h  ChestProtocol.h  main.cpp
games/common/: CMakeLists.txt  Inventory.cpp  Inventory.h  WeaponCooldown.h
tests/: CMakeLists.txt  MockRenderer.h  test_animation_player.cpp  test_animation_state_machine.cpp  test_audio_emitter.cpp  test_audio_engine.cpp  test_bitmap_font.cpp  test_bloom.cpp  test_byte_stream.cpp  test_character_animator.cpp  test_character_controller.cpp  test_clock_sync.cpp  test_collision.cpp  test_collision_shape.cpp  test_component_nodes.cpp  test_component_registry.cpp  test_component_set.cpp  test_core_components.cpp  test_curl_noise.cpp  test_editor_state.cpp  test_file_watcher.cpp  test_first_person_controller.cpp  test_fixed_tick_scheduler.cpp  test_framework.h  test_free_fly_camera.cpp  test_gameplay_nodes.cpp  test_gizmo_registry.cpp  test_glsl_to_spirv.cpp  test_gltf_loader.cpp  test_graph_editor.cpp  test_health.cpp  test_hitscan_rifle.cpp  test_hud.cpp  test_ibl.cpp  test_inventory.cpp  test_inventory_serialize.cpp  test_iso_view.cpp  test_lag_compensator.cpp  test_logic_runtime.cpp  test_look_at.cpp  (+57 more)
tests/assets/gltf/: Triangle.gltf
(+313 files in other folders)
